force-app/main/default/objects/Opportunity_Case_Relation__c/Opportunity_Case_Relation__c.object-meta.xml
<CustomObject>
    <description>Junction object to associate cases with opportunities</description>
    <label>Opportunity Case Relation</label>
    <nameField>
        <displayFormat>OCR-{00000000}</displayFormat>
        <label>Opportunity Case Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Case Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>