force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunity Case Relations</relationshipLabel>
    <relationshipName>Opportunity_Case_Relations_Case</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>