force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <formula>Case__r.CaseNumber</formula>
    <label>Case Name</label>
    <type>Text</type>
</CustomField>