force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Funding_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Funding_Purpose__c</fullName>
    <formula>TEXT(Opportunity__r.Funding_Purpose__c)</formula>
    <label>Funding Purpose</label>
    <type>Text</type>
</CustomField>