force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Grant_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_End_Date__c</fullName>
    <formula>Opportunity__r.Grant_End_Date__c</formula>
    <label>Grant End Date</label>
    <type>Date</type>
</CustomField>