force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Grant_Pre_Award_Staff__c.field-meta.xml
<CustomField>
    <fullName>Grant_Pre_Award_Staff__c</fullName>
    <label>Grant Pre-Award Staff</label>
    <length>100</length>
    <type>Text</type>
</CustomField>