force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Grant_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Start_Date__c</fullName>
    <formula>Opportunity__r.Grant_Start_Date__c</formula>
    <label>Grant Start Date</label>
    <type>Date</type>
</CustomField>