force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Case Relations</relationshipLabel>
    <relationshipName>Opportunity_Case_Relations_Opportunity</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>