force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Opportunity_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team_Members__c</fullName>
    <formula>Opportunity__r.Opportunity_Team_Members__c</formula>
    <label>Opportunity Team Members</label>
    <type>Text</type>
</CustomField>