force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Primary_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Primary_Investigator__c</fullName>
    <label>Principal Investigator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>