force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Proposal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Notes__c</fullName>
    <label>Proposal Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>