force-app/main/default/objects/Opportunity_Case_Relation__c/fields/Stage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stage_Amount__c</fullName>
    <formula>Opportunity__r.Stage_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>